# university-homeworks

./: .gitignore  README.md
application-development-technologies/3-gradle-builds/: README.md
application-development-technologies/5-ansible/: complex-nginx.yml  nginx-role.yml  nginx-with-role.yml  not-just-role.yml  simple-nginx.yml  vms.yml
clientside-of-internet-resources/: index.html  readme.md  trailing-slash.js
clientside-of-internet-resources/work1/: index.html  task.md
clientside-of-internet-resources/work10/: index.html  index.js  styles.css
clientside-of-internet-resources/work11/: index.html  index.js  styles.css
clientside-of-internet-resources/work12/: float-notification.css  index.html  index.js  styles.css
clientside-of-internet-resources/work13/: float-notification.css  index.html  index.js  styles.css
clientside-of-internet-resources/work14/: index.html  index.js  styles.css
clientside-of-internet-resources/work2/: footer.css  header.css  index.html  styles.css
clientside-of-internet-resources/work3/: mobile.css  mobile.html
clientside-of-internet-resources/work4/: styles.css  support-ticket.html
clientside-of-internet-resources/work6/: button1.css  button2.css  button3.css  button4.css  float-notification.css  index.html  styles.css
clientside-of-internet-resources/work7/: anicards.css  blured-cards.css  form.css  glass-cards.css  index.html  socials.css  styles.css
data-structs-and-processing-algorithms/part-1/homework-1/: CMakeLists.txt  array_dynamic.cpp  array_dynamic.h  array_static.cpp  array_static.h  array_vector.cpp  array_vector.h  dynamic_array.cpp  main.cpp  readme.md  static_array.cpp  utils.cpp  utils.h  vector_array.cpp
data-structs-and-processing-algorithms/part-2/work2/: CMakeLists.txt  main.cpp  sample.txt  task1.cpp  task1.h  task2.cpp  task2.h
data-structs-and-processing-algorithms/part-2/work4/: CMakeLists.txt  main.cpp  node.cpp  node.h  readme.md  siaod-tree-reference.cpp
procedural-programming/additional-tasks/for-extra-points/: CMakeLists.txt  arguments.cpp  arguments.h  desktops.cpp  desktops.h  main.cpp  readme.md  utils.cpp  utils.h
procedural-programming/additional-tasks/monks-110/: CMakeLists.txt  main.cpp
(+334 files in other folders)
